--- a/CryptlexLicensing/Pages/Login.cshtml
+++ b/CryptlexLicensing/Pages/Login.cshtml
@@ -1,31 +1,30 @@
-﻿@model LicensingModel
-@{
-    ViewData["Title"] = "Login";
-}
+﻿@page
+@model CryptlexLicensingApp.Pages.LoginModel
 
-<main class="form-signin w-100 m-auto">
-    <form asp-action="Authenticate" asp-controller="Home" method="post">
-        <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
+<div class="d-flex justify-content-center align-items-center" style="height: 100vh;">
+    <main class="form-signin">
+        <form asp-action="Authenticate" asp-controller="Home" method="post">
+            <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
+            <div class="form-floating">
+                <input type="email" class="form-control" id="floatingEmail" name="email" placeholder="name@example.com">
+                <label for="floatingEmail">Email address</label>
+            </div>
+            <div class="form-floating">
+                <input type="password" class="form-control" id="floatingPassword" name="password" placeholder="Password">
+                <label for="floatingPassword">Password</label>
+            </div>
+            <div class="form-floating">
+                <input type="password" class="form-control" id="floatingAccountId" name="accountId" placeholder="Account Id">
+                <label for="floatingAccountId">Account Id</label>
+            </div>
+            <button class="btn btn-primary w-100 py-2" type="submit">Sign in</button>
+        </form>
 
-        <div class="form-floating">
-            <input type="email" class="form-control" id="floatingEmail" name="email" placeholder="name@example.com">
-            <label for="floatingEmail">Email address</label>
-        </div>
-        <div class="form-floating">
-            <input type="password" class="form-control" id="floatingPassword" name="password" placeholder="Password">
-            <label for="floatingPassword">Password</label>
-        </div>
-        <div class="form-floating">
-            <input type="password" class="form-control" id="floatingAccountId" name="accountId" placeholder="Account Id">
-            <label for="floatingAccountId">Account Id</label>
-        </div>
-        <button class="btn btn-primary w-100 py-2" type="submit">Sign in</button>
-    </form>
-
-    <form asp-action="SignUp" asp-controller="Home" method="get">
-        <button class="btn btn-secondary w-100 mt-3" type="button" data-bs-toggle="modal" data-bs-target="#signupModal">Sign Up</button>
-    </form>
-</main>
+        <form asp-action="SignUp" asp-controller="Home" method="get">
+            <button class="btn btn-secondary w-100 mt-3" type="button" data-bs-toggle="modal" data-bs-target="#signupModal">Sign Up</button>
+        </form>
+    </main>
+</div>
 
 <div class="modal fade" id="signupModal" tabindex="-1" aria-labelledby="signupModalLabel" aria-hidden="true">
     <div class="modal-dialog">
