--- a/CryptlexLicensingApp/Pages/Products.cshtml
+++ b/CryptlexLicensingApp/Pages/Products.cshtml
@@ -9,30 +9,23 @@
     <a id="addButton" class="btn btn-success">Add Product</a>
 </p>
 
-@if (Model.Products.Count > 0)
+@if (Model.ProductResponses?.Count > 0)
 {
     <table class="table table-striped table-hover table-bordered">
-        <thead class="thead-light">
+        <thead>
             <tr>
-                <th scope="col">#</th>
                 <th scope="col">Name</th>
-                <th scope="col">Total Licenses</th>
-                <th scope="col">Total Trial Activations</th>
-                <th scope="col">Total Product Versions</th>
-                <th scope="col">Creation Date</th>
-                <th scope="col">Actions</th>
+                <th scope="col">Display name</th>
+                <th scope="col">Description</th>
             </tr>
         </thead>
         <tbody>
-            @foreach (var product in Model.Products)
+            @foreach (var product in Model.ProductResponses)
             {
                 <tr>
-                    <th scope="row">@product.Id</th>
                     <td>@product.Name</td>
-                    <td>@product.TotalLicenses</td>
-                    <td>@product.TotalTrialActivations</td>
-                    <td>@product.TotalProductVersions</td>
-                    <td>@product.CreationDate</td>
+                    <td>@product.DisplayName</td>
+                    <td>$@product.Description</td>
                     <td>
                         <a class="btn btn-info btn-sm">Details</a>
                         <a class="btn btn-danger btn-sm">Delete</a>
@@ -101,4 +94,3 @@ else
         $('#myModal').modal('hide');
     };
 </script>
-
